--- a/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
+++ b/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
@@ -102,10 +102,7 @@
             />
 
             <p class="mt-4 color-2 text-justify fs-5 text-second">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-              ratione pariatur, amet doloribus veritatis, illo deserunt mollitia
-              saepe ea sed eligendi nisi inventore minus quos? Officiis ex autem
-              quia facilis?
+              Chúng tôi rất mong muốn được phục vụ và đồng hành cùng bạn trên chuyến đi sắp tới. Hãy điền đầy đủ thông tin cá nhân và số lượng vé bạn muốn đặt để chúng tôi có thể hoàn tất quá trình đặt vé của bạn một cách nhanh chóng và hiệu quả nhất. Cảm ơn bạn đã chọn FlightDot - nơi mang đến trải nghiệm du lịch hoàn hảo từ đầu đến cuối!
             </p>
           </div>
           <div class="col-6">
