--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -206,15 +206,7 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is
-                shown by default, until the collapse plugin adds the appropriate
-                classes that we use to style each element. These classes control
-                the overall appearance, as well as the showing and hiding via
-                CSS transitions. You can modify any of this with custom CSS or
-                overriding our default variables. It's also worth noting that
-                just about any HTML can go within the
-                <code>.accordion-body</code>, though the transition does limit
-                overflow.
+                Chọn FlightDot không chỉ là việc đặt vé máy bay, mà là trải nghiệm tuyệt vời từ đầu đến cuối. Chúng tôi tự hào về sự thuận tiện, linh hoạt và độ chính xác cao trong quá trình đặt vé. Không chỉ vậy, FlightDot cam kết mang đến cho bạn những ưu đãi độc quyền và giá vé hấp dẫn nhất trên thị trường
               </div>
             </div>
           </div>
@@ -238,15 +230,7 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is
-                hidden by default, until the collapse plugin adds the
-                appropriate classes that we use to style each element. These
-                classes control the overall appearance, as well as the showing
-                and hiding via CSS transitions. You can modify any of this with
-                custom CSS or overriding our default variables. It's also worth
-                noting that just about any HTML can go within the
-                <code>.accordion-body</code>, though the transition does limit
-                overflow.
+                Đặt vé trên FlightDot chưa bao giờ dễ dàng như vậy. Với giao diện thân thiện, chỉ cần vài bước đơn giản, bạn có thể chọn lựa giữa hàng nghìn chuyến bay và lựa chọn các dịch vụ bổ sung. Quá trình thanh toán an toàn và nhanh chóng giúp bạn tiết kiệm thời gian và tận hưởng chuyến đi của mình mà không gặp phải bất kỳ phiền toái nào.
               </div>
             </div>
           </div>
@@ -269,15 +253,7 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is
-                hidden by default, until the collapse plugin adds the
-                appropriate classes that we use to style each element. These
-                classes control the overall appearance, as well as the showing
-                and hiding via CSS transitions. You can modify any of this with
-                custom CSS or overriding our default variables. It's also worth
-                noting that just about any HTML can go within the
-                <code>.accordion-body</code>, though the transition does limit
-                overflow.
+                FlightDot không chỉ đơn giản là nơi đặt vé, chúng tôi là đối tác lý tưởng cho mọi hành trình của bạn. Tận hưởng những tiện ích đặc biệt như đặt khách sạn, thuê xe, và thậm chí là đặt tour du lịch - tất cả chỉ trong một trang web. Chúng tôi cam kết đem đến trải nghiệm du lịch toàn diện và không gì là quá khó khăn.
               </div>
             </div>
           </div>
@@ -300,15 +276,7 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is
-                hidden by default, until the collapse plugin adds the
-                appropriate classes that we use to style each element. These
-                classes control the overall appearance, as well as the showing
-                and hiding via CSS transitions. You can modify any of this with
-                custom CSS or overriding our default variables. It's also worth
-                noting that just about any HTML can go within the
-                <code>.accordion-body</code>, though the transition does limit
-                overflow.
+                Chúng tôi hiểu rằng có những thời điểm bạn cần sự hỗ trợ. Đội ngũ chăm sóc khách hàng của chúng tôi luôn sẵn sàng giải quyết mọi thắc mắc và sự cố. Liên hệ với chúng tôi qua đường dây nóng hoặc email, chúng tôi cam kết đảm bảo rằng mọi vấn đề của bạn sẽ được giải quyết một cách nhanh chóng và hiệu quả nhất. FlightDot - luôn bên bạn, từ lúc bắt đầu đến khi kết thúc chuyến đi.
               </div>
             </div>
           </div>
