--- a/src/app/components/column-charts/column-charts.component.html
+++ b/src/app/components/column-charts/column-charts.component.html
@@ -1,3 +1,7 @@
-<div>
-    <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'660px'}"></canvasjs-chart>    
-</div>    
+<div *ngIf="loading">
+    Loading data...
+</div>
+
+<div *ngIf="!loading">
+    <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'660px'}"></canvasjs-chart>
+</div>
