--- a/src/app/components/line-charts-eco/line-charts.component.html
+++ b/src/app/components/line-charts-eco/line-charts.component.html
@@ -1,3 +1,3 @@
-<div onscroll="onScroll($event)">
-    <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'400px'}"></canvasjs-chart>    
+<div>
+    <canvasjs-chart  [options]="chartOptions" [styles]="{width: '100%', height:'430px'}"></canvasjs-chart>    
 </div>    
