--- a/src/app/components/pie-charts/pie-charts.component.html
+++ b/src/app/components/pie-charts/pie-charts.component.html
@@ -1,3 +1,8 @@
-<div>
-    <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'400px'}"></canvasjs-chart>    
-</div>  
+<div *ngIf="loading">
+    Loading data...
+  </div>
+  
+  <div *ngIf="!loading">
+    <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'400px'}"></canvasjs-chart>
+  </div>
+  
