--- a/src/app/pages/statistical/statistical.component.html
+++ b/src/app/pages/statistical/statistical.component.html
@@ -21,7 +21,7 @@
                         <div class="statis-card">
                             <p>Số khách tạo tài khoản</p>
                             <p class="detail">Tổng số tài khoản được tạo: {{ tongSoTaiKhoan }}</p>
-                            <p class="detail">Đa số là nam giới</p>
+                            <p class="detail">Đa số là {{ majorityGender }}</p>
                         </div>
                         <div class="card-body">
                             <p>Khách đặt nhiều vé nhất</p>
