--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.html
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.html
@@ -32,7 +32,7 @@
         <option value="NGA" id="RU">Nga</option>
         <option value="SINGAPORE" id="SG">Singapore</option>
         <option value="HONGKONG" id="HK">Hồng Kông</option>
-        <option value="KOREA" id="KR">Hàn Quốc</option>
+        <option value="HANQUOC" id="KR">Hàn Quốc</option>
       </select>
     </div>
     <div class="form-field">
