--- a/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
+++ b/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
@@ -18,10 +18,10 @@
       justify-content: center;
       align-items: center;">
         <div
-          class="row border-color-2 p-3 border-ra"
+          class="row p-3 "
           style="border-radius: 20px; width: 1000px; margin-top:16px"
         >
-          <div class="col-4" style="background-color: red;height: 300px;">
+          <div class="col-4" style="height: 300px;">
             <img [src]="ImageUrl(flightInfo?.chuyenBay.noiXuatPhat)" alt="ImageNoiDi" sizes="center" style="width: 300px;height: 300px;">
           </div>
           <div class="col-4" style="height: 300px;justify-content: center;align-items: center;display: flex;">
@@ -30,7 +30,7 @@
               {{ flightInfo?.chuyenBay.noiDen }}
             </h1>
           </div>
-          <div class="col-4" style="background-color: yellow;height: 300px;">
+          <div class="col-4" style="height: 300px;">
             <img [src]="ImageUrl(flightInfo?.chuyenBay.noiDen)" alt="ImageNoiDen" sizes="center" style="width: 300px;height: 300px;">
           </div>
         </div>
