--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
       class="container-fuild background-img div-center row"
       style="width: 100%; padding: 20px"
     >
-      <div class="col-12 col-xl-4" style="margin: 10px;">
+      <div class="col-12 col-xl-4" style="margin: 10px">
         <div
           style="
             background-color: #d9d9d9;
@@ -33,7 +33,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-xl-5" style="margin: 10px;">
+      <div class="col-12 col-xl-5" style="margin: 10px">
         <form class="d-flex row">
           <input
             class="form-control me-2 input-date"
@@ -452,49 +452,35 @@
         </div>
       </div>
       <div class="div-center margin-bottom" style="height: 250px">
-        <div class="div-contact row" >
+        <div class="div-contact row">
           <div class="col-4 div-center">
             <img src="assets/img/ticket.png" alt=".." width="100px" />
           </div>
           <div class="col-8 div-center">
             <div class="rotatingText div-center" style="margin-right: 30px">
-              <div class="rotatingText-content" style="margin-top:40px">
-                <div id="mc_embed_shell">
-                  <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-              <style type="text/css">
-                    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width: 396px;}
-                    /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-            </style>
-            <div id="mc_embed_signup">
-                <form action="https://gmail.us22.list-manage.com/subscribe/post?u=d79996fd8f394de82fe8e2763&amp;id=1d043ea14e&amp;f_id=000ad3e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-                    <div id="mc_embed_signup_scroll"><h2>Đăng kí để nhận thông tin mới nhất</h2>
-                        <div class="indicates-required"><span class="asterisk">*</span> cần phải nhập email</div>
-                        <div class="mc-field-group"><label for="mce-EMAIL">Địa chỉ Email <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
-                    <div id="mce-responses" class="clear foot">
-                        <div class="response" id="mce-error-response" style="display: none;"></div>
-                        <div class="response" id="mce-success-response" style="display: none;"></div>
+              <div class="rotatingText-content" style="margin-top: 40px">
+
+                <div class="email-registration-container">
+                  <form (ngSubmit)="AddEmail()">
+                    <h2>Đăng kí để nhận thông tin mới nhất</h2>
+                    <div class="form-group">
+                      <label for="email">Email Address</label>
+                      <input type="email" id="email" [(ngModel)]="email" name="email" required>
                     </div>
-                <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                    /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
-                    <input type="text" name="b_d79996fd8f394de82fe8e2763_1d043ea14e" tabindex="-1" value="">
+                    <button type="submit">Subscribe</button>
+                  </form>
                 </div>
-                    <div class="optionalParent">
-                        <div class="clear foot" style="display: flex;align-items: center;justify-content: center;"> 
-                            <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe" style="background-color:#146c94 ;">
-                        </div>
-                    </div>
-                </div>
-            </form>
-            </div>
-            <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
+                
+                
+                
             
-              
+                
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <app-footer></app-footer>
   </div>
-  <app-footer></app-footer>
 </div>
