--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -22,6 +22,10 @@
           <a class="nav-link text-color"  routerLink="/booking-ticket">
             Chuyến bay</a>
         </li>
+        <li class="nav-item" style="color: white !important" *ngIf="isUser">
+          <a class="nav-link text-color" routerLink="/invoices">
+            Hóa đơn</a>
+        </li>
         <li class="nav-item" style="color: white !important" *ngIf="isAdmin">
           <a class="nav-link text-color"  (click)="canAccessAdmin('/admin-dashboard/admin-flight-management')">
             Quản lý</a>
