cook done " rss vnexpress " but no UI :)))

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -324,8 +324,9 @@
         </div>
       </div>
       <section class="margin" id="aboutus">
-        <h1 class="font-title">VỀ CHÚNG TÔI:</h1>
-        <p>Giới thiệu ngắn</p>
+<!-- src/app/app.component.html -->
+<app-rss-feed></app-rss-feed>
+
       </section>
       <div
         class="div-center margin row accordion-border"
