--- a/src/app/pages/add-flight/add-flight.component.html
+++ b/src/app/pages/add-flight/add-flight.component.html
@@ -154,7 +154,7 @@
                 style="text-align: right;">
             </div>
             <div class="form-field">
-                <label for="price">Giá (đ)</label><br>
+                <label for="price">Giá ($)</label><br>
                 <input type="text" id="price" name="price"
                 oninput="this.value = (parseInt(this.value.replace(/[^0-9]/g, '')) ).toLocaleString()"
                 [(ngModel)]="addFlightRequest.donGia"
