--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -115,7 +115,7 @@
       </ng-container>
 
       <ng-container matColumnDef="DonGia">
-        <th mat-header-cell *matHeaderCellDef> Giá (đ) </th>
+        <th mat-header-cell *matHeaderCellDef> Giá ($) </th>
         <td mat-cell *matCellDef="let element"> {{element.donGia | number:'1.0-3'}} </td>
       </ng-container>
 
