--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.html
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.html
@@ -109,7 +109,7 @@
       </ng-container>
 
       <ng-container matColumnDef="tongGia">
-        <th mat-header-cell *matHeaderCellDef> Giá </th>
+        <th mat-header-cell *matHeaderCellDef> Giá ($) </th>
         <td mat-cell *matCellDef="let element"> {{element.tongGia}} </td>
       </ng-container>
       <ng-container matColumnDef="tinhTrang">
