--- a/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
+++ b/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
@@ -215,7 +215,7 @@
                 </div>
               </div>
             </div>
-            <div class="ticket-btn mt-6 d-flex justify-content-center h-50px" style="margin-top: 20px; align-items: top">
+            <div class="ticket-btn mt-6 d-flex justify-content-end h-50px" style="margin-top: 20px">
               <input
                 style="background-color: #146C94 !important;color: white; height: 50px;"
                 type="submit"
@@ -223,7 +223,6 @@
                 class="btn  px-5 py-2 fw-bold border-color-1"
                 value="Đặt vé"
               />
-              <ngx-paypal [config]="payPalConfig"></ngx-paypal>
 
             </div>
             
