--- a/src/app/components/rss-feed/rss-feed.component.scss
+++ b/src/app/components/rss-feed/rss-feed.component.scss
@@ -1,42 +1,66 @@
-/* src/app/rss-feed/rss-feed.component.css */
+/* src/app/components/rss-feed/rss-feed.component.scss */
 
-/* Container for each article */
-article {
-    border: 1px solid #ddd;
-    padding: 15px;
-    margin: 15px 0;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+$border-color: #e0e0e0;
+$box-shadow-color: rgba(0, 0, 0, 0.1);
+$link-color: #007bff;
+$hover-color: rgba(0, 0, 0, 0.1);
+
+.carousel-item {
+  position: relative;
+
+
+  .rss-image {
+    width: 100%;
+    height: 100%; // Set a consistent height
+    object-fit: cover; // Ensures the image covers the area without distortion
   }
-  
-  /* Title of the article */
-  article h2 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
+  .carousel-caption {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 20px;
+    text-align: center;
+
+    h5 {
+      font-size: 1.5em;
+      margin-bottom: 10px;
+    }
+
+    .pubDate {
+      font-size: 0.9em;
+      margin-bottom: 10px;
+    }
+
+    .description {
+      font-size: 1em;
+      margin-bottom: 10px;
+    }
+
+    a {
+      color: #fff;
+      background-color: #146C94;
+      width: 100px;
+      min-width: 40px;
+      height: 50px;
+      border-radius: 5px;
+      text-decoration: none;
+
+      &:hover {
+        background-color: darken($link-color, 10%);
+      }
+    }
   }
-  
-  /* Publication date */
-  article p.pubDate {
-    color: #888;
-    font-size: 0.9em;
-    margin-bottom: 15px;
-  }
-  
-  /* Description of the article */
-  article p.description {
-    font-size: 1em;
-    line-height: 1.6;
-    margin-bottom: 15px;
-  }
-  
-  /* Read more link */
-  article a {
-    color: #007bff;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  article a:hover {
-    text-decoration: underline;
-  }
-  
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: transparent;
+}
