--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -325,16 +325,21 @@
       </div>    
       <h1 class="font-title text-center">TIN TỨC THẾ GIỚI MỚI NHẤT</h1>
 
-      <div
-      class="col-12 col-xl-8 margin-top"
-      style="height: 600px;overflow-y: hidden;"
-      
-    >
-    <app-rss-feed>
-
-</app-rss-feed>
-
-    </div>
+      <div class="container overflow-hidden text-center">
+        <div class="row justify-content-evenly">
+          <div
+            class="col-12 margin-top"
+            style="
+              border: 2px solid #146c94;
+              border-radius: 20px;
+              height: 100%;
+              overflow: hidden;
+            "
+          >
+          <app-rss-feed></app-rss-feed>
+          </div>
+        </div>
+      </div>
       <div
         class="div-center margin row accordion-border"
         style="background-color: #d9d9d9"
