update meta tag

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -473,7 +473,7 @@
             <div class="rotatingText div-center" style="margin-right: 30px">
               <div class="rotatingText-content" style="margin-top: 40px">
 
-                <div class="email-registration-container" style="">
+                <div class="email-registration-container">
                   <form (ngSubmit)="AddEmail()">
                     <h2>Đăng kí để nhận thông tin mới nhất</h2>
                     <div class="form-group">
