--- a/src/app/pages/invoices/invoices.component.html
+++ b/src/app/pages/invoices/invoices.component.html
@@ -34,7 +34,7 @@
                 <mat-header-cell *matHeaderCellDef></mat-header-cell>
                 <mat-cell *matCellDef="let invoice">
                     <!-- <button mat-icon-button (click)="editInvoice(invoice)" style="color: rgb(16, 227, 16);"><mat-icon>payment</mat-icon></button> -->
-                    <button mat-icon-button (click)="goesToInvoiceDetail(invoice.idhoadon)" style="color: rgb(16, 227, 16);"><mat-icon>launch</mat-icon></button>
+                    <button mat-icon-button (click)="goesToInvoiceDetail(invoice.idhoadon)"><mat-icon>launch</mat-icon></button>
                 </mat-cell>
             </ng-container>
             
