--- a/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
+++ b/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
@@ -237,7 +237,7 @@
 
       <div class="col-12" *ngIf="!isLoggedIn()">
         <p class="mt-4 color-2 text-justify fs-5 text-second justify-content-center d-flex">
-          <span style="color: red;">*</span> Vui lòng đăng nhập để thực hiện việc đặt vé máy bay
+          <span style="color: red; margin-right: 5px">*</span> Vui lòng đăng nhập để thực hiện việc đặt vé máy bay
         </p>
         <div class="ticket-btn mt-6 d-flex justify-content-center h-50px" style="margin-top: 20px">
           <input
