--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -68,7 +68,7 @@
             style="white-space: nowrap"
           >
             <mat-icon>login</mat-icon>
-            Login
+            Đăng nhập
           </a>
         </div>
     </div>
