--- a/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
+++ b/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
@@ -74,6 +74,8 @@
       </div>
     </div>
       </div>
+      <div class="sharethis-inline-share-buttons"></div>
+
       <div class="col-12" *ngIf="isLoggedIn()">
         <div class="row" [formGroup]="form">
           <div class="col-6">
