--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -476,7 +476,7 @@
 
                 <div class="email-registration-container">
                   <form (ngSubmit)="AddEmail()">
-                    <h2>Đăng kí để nhận thông tin mới nhất</h2>
+                    <h2>Đăng kí để nhận thông tin mới</h2>
                     <div class="form-group">
                       <label for="email">Địa chỉ email của bạn: </label>
                       <input style="width: 280px;height: 32px;border: 1px #146c94 solid;border-radius: 5px;" type="email" id="email" [(ngModel)]="email" name="email" required>
