--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.html
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.html
@@ -116,6 +116,14 @@
         <th mat-header-cell *matHeaderCellDef> Tình trạng </th>
         <td mat-cell *matCellDef="let element"> {{element.tinhTrang}} </td>
       </ng-container>
+      <ng-container matColumnDef="maGiaoDich">
+        <th mat-header-cell *matHeaderCellDef> Mã giao dịch </th>
+        <td mat-cell *matCellDef="let element"> {{element.maGiaoDich}} </td>
+      </ng-container>
+      <ng-container matColumnDef="tenKieuThanhToan">
+        <th mat-header-cell *matHeaderCellDef> Kiểu thanh toán </th>
+        <td mat-cell *matCellDef="let element"> {{element.tenKieuThanhToan}} </td>
+      </ng-container>
       <!-- <ng-container matColumnDef="approve">
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let element"> <button *ngIf="element.tinhTrang == 'Đang xác nhận'"(click)="onApprove(element)">Duyệt</button> </td>
