--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
@@ -215,6 +215,8 @@
 .mat-column-soLuong,
 .mat-column-tongGia,
 .mat-column-tinhTrang,
+.mat-column-maGiaoDich,
+.mat-column-tenKieuThanhToan,
 .mat-column-action {
     color: black;
     text-align: center;
